@@ -1,6 +1,7 @@
 <div id="content" i18n:domain="PloneMeeting" class="meeting_item_absents_tooltipster">
   <h4><span i18n:translate="">This attendee is marked as absent for following items</span> :</h4>
-  <ul tal:repeat="item view/getItemsForAbsent">
-    <li><span tal:content="python: item.getItemNumber(for_display=True)" />. <span tal:content="structure item/getPrettyLink" /></li>
+  <ul>
+    <li tal:repeat="item view/getItemsForAbsent">
+      <span tal:content="python: item.getItemNumber(for_display=True)" />. <span tal:replace="structure item/getPrettyLink" /></li>
   </ul>
 </div>
